# C-Compiler

./: .gitignore  CMakeLists.txt  DESIGN.md  Dockerfile  README.md  testing.md  tt.ps1
.github/workflows/: ci.yml
benchmarks/: basic2.c  binarytree.c  linkedlist.c  mixed.c  powmod.c  primes.c  run_tests.sh  run_tests_wsl.ps1  simple1.c  simple2.c  test.c  test_simple.c  thermopylae.c
benchmarks/extra_credit/parse_valid/chapter_11/: switch_int.c
benchmarks/extra_credit/parse_valid/chapter_12/: switch_uint.c
benchmarks/extra_credit/parse_valid/chapter_13/: nan.c
benchmarks/extra_credit/parse_valid/chapter_6/: goto_backwards.c  label_all_statements.c  postfix_if.c
benchmarks/extra_credit/parse_valid/chapter_8/: goto_bypass_condition.c  goto_bypass_init_exp.c  loop_header_postfix_and_prefix.c
benchmarks/nlsandler/: .import.py
benchmarks/nlsandler/parse_invalid/chapter_4/: missing_const.c
benchmarks/nlsandler/parse_valid/chapter_10/: data_on_page_boundary_linux.s  distinct_local_and_extern.c  shadow_static_local_var.c  static_local_multiple_scopes.c  static_local_uninitialized.c  static_variables_in_expressions.c  tentative_definition.c
benchmarks/nlsandler/parse_valid/chapter_20/: util.h
benchmarks/nlsandler/parse_valid/chapter_6/: binary_condition.c  binary_false_condition.c  else.c  if_nested.c  if_nested_2.c  if_nested_3.c  if_nested_4.c  if_nested_5.c  if_not_taken.c  if_taken.c  multiple_if.c
benchmarks/sa/bad_indirection/: bad_indirection.c  expected
benchmarks/sa/break_outside/: break_outside.c  expected
benchmarks/sa/call_arity/: call_arity.c  expected
benchmarks/sa/call_type/: call_type.c  expected
benchmarks/sa/lvalue/: expected  lvalue.c
benchmarks/sa/sa1/: expected  sa1.c
benchmarks/sa/sa13/: expected  sa13.c
benchmarks/sa/sa14/: expected  sa14.c
benchmarks/sa/sa15/: expected  sa15.c
benchmarks/sa/sa2/: expected  sa2.c
benchmarks/sa/sa3/: expected  sa3.c
benchmarks/sa/sa4/: expected  sa4.c
benchmarks/sa/sa9/: expected  sa9.c
benchmarks/sa/void_value/: expected  void_value.c
src/: main.cpp
src/ast/: StorageClass.h
src/ast/ASTNodes/: ASTNode.h  Program.h
src/ast/Expressions/: AssignExpr.h  BinaryExpr.h  CastExpr.h  Expressions.h  FloatingLiterals.h  FunctionCallExpr.h  InitExpr.h  IntLiterals.h  MemberExpr.h  SizeOfExpr.h  StringLiterals.h  SubscriptExpr.h  TernaryExpr.h  UnaryExpr.h  VariableExpr.h
src/ast/Statements/: AssignStmt.h  BlockStmt.h  BreakStmt.h  ContinueStmt.h  DeclareStmt.h  DoWhileStmt.h  ExprStmt.h  ForStmt.h  FunctionCallStmt.h  FunctionDeclStmt.h  IfStmt.h  ReturnStmt.h  Statement.h  WhileStmt.h
src/ast/TopLevelNodes/: Function.h  StructDecl.h  TopLevelNode.h  VarDecl.h
src/ast/visitors/: ASTDebugPrinter.h
src/cfg/: CFG.h
src/codegen/: ABI.h  AsmWriter.h  codegen.h
src/codegen/ast/ASTNodes/: codegenASTNode.h  (+1 more)
src/codegen/instructions/: instructions.h  operand.h
src/lexer/: lexer.cpp  lexer.h  token.h
src/lexer/tests/: test_lexer.cpp
src/parser/: parser.h
src/registerallocator/: registerAllocator.h
src/semanticanalyzer/: SemanticAnalyzer.h
src/support/: RTTI.h
src/symboltable/: SymbolTable.h
src/tacky/: Pass.h  tacky.h
src/tacky/instructions/: instructions.h  val.h
src/types/: StructLayout.h  TypeQueries.h  types.h
src/utils/: common.h  diagnostic.cpp  diagnostic.h
tools/: tt.py
(+111 files in other folders)
